add navigation drawer menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Durable</string>
     <string name="press_one_again">กดอีกครั้งเพื่อออกจากแอพ</string>
     <string name="click_forget_password">ลืมรหัสผ่าน<u>คลิกที่นี้</u></string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">ตั้งค่า</string>
 </resources>
