--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">ตั้งค่า</string>
+    <string name="title_warning">แจ้งเตือน ?</string>
+    <string name="internet_connection_fail">ไม่สามารถเชื่อมต่ออินเทอร์เน็ตได้ \nลองใหม่อีกครั้ง</string>
+    <string name="ok">ตกลง</string>
+    <string name="cancel">ยกเลิก</string>
+    <string name="please_enter_data">กรุณากรอกข้อมูลให้ครบ</string>
+    <string name="loading">กำลังโหลด...</string>
 </resources>
