--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_durable_property">สินทรัพย์ถาวร</string>
     <string name="title_durable_material">วัสดุถาวร</string>
     <string name="hint_edit_text_search_asset">ระบุรหัสครุภัณฑ์</string>
+    <string name="text_manage">จัดการ</string>
 </resources>
